# Rl-Base10

./: .gitignore  README.md  compare_sft_grpo.py  evaluator.py  generate_sft_data_ollama.py  llms.py  main.py  pyproject.toml  requirements.txt  sft_train.py
