[project]
name = "grpo-training"
version = "0.1.0"
description = "GRPO (DeepSeek style) training implementation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.3.0",
    "datasets>=3.2.0",
    "einops>=0.8.0",
    "huggingface-hub>=0.28.1",
    "matplotlib>=3.5.1",
    "numpy>=1.24.0",
    "safetensors>=0.5.2",
    "torch==2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.48.2",
]

[project.optional-dependencies]
flash-attn = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

# flash-attn must be installed manually after uv sync:
# .venv/bin/python -m ensurepip
# .venv/bin/python -m pip install "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.8cxx11abiFALSE-cp311-cp311-linux_x86_64.whl"
[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[dependency-groups]
dev = []
